# RMV-task05

./: README.md
calibration/: main.py  requirements.txt  utils.py
calibration/calibrators/: fisheye_calibrator.py  mono_calibrator.py  stereo_calibrator.py
model/: chech_env.py  requirements.txt
model/config/: config.py
model/models/: armor_cnn.py
model/outputs/logs/: test_results.json
model/outputs/models/: best_model.onnx  final_model.onnx  final_model.pth
model/scripts/: export_onnx.py  predict.py  predict_onnx.py  test.py  train.py
model/utils/: data_loader.py  visualization.py
src/: CMakeLists.txt  package.xml
src/config/: armor_detect.rviz  detector_params.yaml  hik_camera.rviz  hik_camera_params.yaml  video_armor_detect.rviz
src/launch/: armor_detect_launch.py  combined_launch.py  hik_camera_launch.py  video_armor_detect_launch.py
src/source/: armor_detector_node.cpp  hik_camera_node.cpp  video_armor_detect.cpp
